--- a/style.css
+++ b/style.css
@@ -1,7 +1,45 @@
 body {
-  background: grey;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
+  margin: 0%;
+}
+.wrapper{
+  max-width: 1440px;
+}
+main{
+  background-image: url(img/bear.jpg);
+  max-height: 1000px;
+  display: flex;
+}
+.card{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  width: 250px;
+  background-color: white;
+  margin: 100px auto 80px 200px;
+}
+.card-header{
+  background-color: lightgray;
+  height: 240px;
+  width: 20;
+  width: 230px;  
+}
+h1.beer-name{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-family: 'Roboto', sans-serif;
+  color: black;
+  text-align: center;
+}
+img.beer-img{
+  width: 50px;
+  max-height: 150px;
+  margin: 45px 89px 45px 89px;
+}
+button.random-beer{
+  padding: 0;
+  border: none;
+  background: none;
+  margin-left: 150px;
 }
