--- a/style.css
+++ b/style.css
@@ -6,8 +6,43 @@ body {
   max-width: 100%;
   margin-right: 5%;
 }
+/*  header--------*/
+header{
+  background-color: pink;
+  max-height: 100%;
+}
+.head{
+  display: flex;
+  flex-direction: row;
+}
+ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+li{
+  list-style-type: none;
+  border: 20px solid pink;
+  border-top-width: 0px;
+  border-bottom-width: 0px;
+}
+.search{
+  padding-right: 5px;
+  margin: 16px 0px 16px auto;
+}
+
+h1 {
+    text-align: center;
+    margin: 0px auto 0px auto;
+    padding: 50px;
+}
+
+
+/*main---------*/
+
 main{
-  background-image: url(img/bear.jpg);
+  background-image: url(img/beer.jpg);
   max-height: 100%;
   display: flex;
   z-index: -2;
@@ -24,22 +59,22 @@ main{
   align-items: center;
   border-radius: 15px;
   height: calc(200px + 30vh);
-  width: calc(250px + 15vh);
+  width: calc(200px + 15vh);
   background-color: white;
   margin: 100px auto 80px 20%;
 }
 .card-header{
   background-color: lightgray;
-  height: 240px;
-  width: 20;
-  width: 230px;  
+  height: calc(60px + 30vh);
+  width: calc(170px + 15vh);
 }
 h1.beer-name{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-family: 'Roboto', sans-serif;
-  color: black;
-  text-align: center;
+      
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    color: black;
+    text-align: center;
+    padding: 30px;
 }
 img.beer-img{
   width: 50px;
@@ -54,4 +89,15 @@ button.random-beer{
 }
 button.random-beer:hover{
   cursor: pointer;
+}
+
+/*footer----------*/
+footer{
+  background-color: powderblue;
+  display: flex;
+  flex-direction: row;
+}
+.beer-details{
+  margin: 20px;
+  
 }
