--- a/style.css
+++ b/style.css
@@ -7,26 +7,9 @@ body {
 }
 
 /*  header--------*/
-header{
+header {
   background-color: #F4A460;
   max-height: 100%;
-}
-.head{
-  display: flex;
-  flex-direction: row;
-}
-.head ul{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 10px auto 10px 0px;
-  padding-left: 0px;
-}
-.head ul li{
-  list-style-type: none;
-  border: 20px solid#F4A460;
-  border-top-width: 0px;
-  border-bottom-width: 0px;
 }
 .search{
   padding-right: 5px;
@@ -39,14 +22,12 @@ h1 {
     padding: 50px;
 }
 
-
 /*main---------*/
 
 main{
   background-image: url(img/beer.jpg);
   max-height: 100%;
   display: flex;
-  z-index: -2;
 }
 
 .card-wrapper {
@@ -70,7 +51,6 @@ main{
   width: calc(170px + 15vh);
 }
 h1.beer-name{
-      
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     color: black;
@@ -94,13 +74,13 @@ button.random-beer:hover{
   cursor: pointer;
 }
 
-/*footer----------*/
-footer{
+footer.beer-info {
   background-color:#F4A460;
   display: flex;
   flex-direction: row;
 }
 .beer-details{
+  width: 70%;
   margin: 20px;
 }
 p.beer-name-info{
@@ -109,12 +89,24 @@ p.beer-name-info{
   font-size: 20px;
 }
 
+.img-wrapper {
+  width: 30%;
+}
+
+.beer-img-info {
+  margin-left: 40%;
+  margin-top: 15%;
+  width: 75px;
+  max-height: 200px;
+}
+
 .wrap{
   width: 30%;
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin-top: 100px;
+  height: 400px;
+  margin-top: 250px;
 }
 
 .search-beer-input {
@@ -159,4 +151,8 @@ p.beer-name-info{
 
 .beer-list li {
   margin: 10px 0px 5px;
+}
+
+.beer-list li:hover {
+  cursor: pointer;
 }
