--- a/style.css
+++ b/style.css
@@ -93,6 +93,9 @@ button.random-beer{
 button.random-beer:hover{
   cursor: pointer;
 }
+li:hover{
+  cursor: alias;
+}
 
 /*footer----------*/
 footer{
